--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "debounce": "^2.0.0",
     "firebase": "^10.9.0",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
